--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "efootball",
-  "name": "efootball",
+  "short_name": "kbbtrends",
+  "name": "kbbtrends",
   "icons": [
     {
       "src": "favicon.ico",
