--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SUPABASE_URL=https://bkmdutrvxugyrwthmtjb.supabase.co
-REACT_APP_SUPABASE_ANON_KEY=sb_publishable_4IGJpyudIfDqJGKssifbrg_Lt4RYh1p
+REACT_APP_SUPABASE_URL=https://zdijuayaslgxkzzfjefc.supabase.co
+REACT_APP_SUPABASE_ANON_KEY=sb_publishable_kERdLyEqsHRXaRVKPH_13g_BeRtaHb9
