moved to backend posts and profile table

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SUPABASE_URL=https://zdijuayaslgxkzzfjefc.supabase.co
-REACT_APP_SUPABASE_ANON_KEY=sb_publishable_kERdLyEqsHRXaRVKPH_13g_BeRtaHb9
+REACT_APP_SUPABASE_URL=https://flxktuojtzkagjrbtrsx.supabase.co
+REACT_APP_SUPABASE_ANON_KEY=sb_publishable_gvACjTgyrK0awQeLCRFNng_SKKgEP7t
